--- a/Modulo_01/bloco_03/dia_04/ex_02/index.html
+++ b/Modulo_01/bloco_03/dia_04/ex_02/index.html
@@ -29,12 +29,12 @@
             <th>Ordem</th>
           </tr>
           <tr>
-            <th>Animalia</th>
-            <th>Arthropoda</th>
-            <th>Crustacea</th>
-            <th>Malacostraca</th>
-            <th>Hoplocarida</th>
-            <th>Stomatopoda</th>
+            <td>Animalia</th>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+            <thdStomatopoda</td>
           </tr>
         </table>
       </section>
@@ -46,7 +46,7 @@
       <section>
         <h2>Habitat</h2>
         <p>Mantis shrimp live in burrows where they spend the majority of their time.[8] The two different categories of mantis shrimp—spearing and smashing—favour different locations for burrowing.[8] The spearing species build their habitat in soft sediments and the smashing species make burrows in hard substrata or coral cavities.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Squilla_mantis.jpg" alt="" width="250px">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Squilla_mantis.jpg" alt="camarao" width="250px">
       </section>
       <section>
         <h2>Refêrencias</h2>
