--- a/Modulo_01/bloco_05/dia_02/ex_03/index.html
+++ b/Modulo_01/bloco_05/dia_02/ex_03/index.html
@@ -1,4 +1,13 @@
-<main id="paiDoPai">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <main id="paiDoPai">
     <section id="pai">
       <section id="primeiroFilho"></section>
       <section id="elementoOndeVoceEsta">
@@ -10,3 +19,19 @@
       <section id="quartoEUltimoFilho"></section>
     </section>
   </main>
+  <script>
+    const pai = document.getElementById('pai');
+    const todosOsFilhos = pai.childNodes;
+
+    for (let i = todosOsFilhos.length - 1; i >= 0; i -= 1){
+      const filhoAtual = todosOsFilhos[i];
+      if (filhoAtual.id !== 'elementoOndeVoceEsta') {
+        filhoAtual.remove();
+      }
+    }
+
+    const segundoEUltimoFilhoDoFilho = document.getElementById('segundoEUltimoFilhoDoFilho');
+    segundoEUltimoFilhoDoFilho.remove();
+  </script>
+</body>
+</html>
